Run pylint-patcher on itself at the end of the Travis job

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 script: python -m unittest discover tests
 
 after_script:
-  # Run Pylint
+  # Run pylint-patcher on itself
   # (for information only, any errors don't affect the Travis result)
+  - ./setup.py install
   - pylint-patcher pylint_patcher
